[tool.black]
target_version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
skip-magic-trailing-comma = true
preview = true

exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.eggs
)/
'''

[tool.mypy]
python_version = "3.7"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "nose.plugins.skip"
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=64.0", "cython>=3"]
build-backend = "setuptools.build_meta"
requires-python = ">=3.8"

[tool.cibuildwheel]
build = "cp{38,39,310,311,312}-*"
