[project]
name = "qcore"
version = "1.11.1"
requires-python = ">=3.9"
keywords = ["quora", "core", "common", "utility"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
authors = [
    {name = "Quora, Inc.", email = "asynq@quora.com"},
]
license = {text = "Apache Software License"}
dynamic = ["readme"]

[tool.black]
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
skip-magic-trailing-comma = true
preview = true

exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.eggs
)/
'''

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "nose.plugins.skip"
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=64.0", "cython>=3"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp{39,310,311,312,313}-*"
